[package]
name = "null-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-secrets = "0.20.0"
shuttle-shared-db = { version = "0.20.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
tracing = "0.1.37"
tokio = "1.26.0"